--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,59 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
   text-align: center;
 }
+
+body {
+  margin: 0;
+  display: flex;
+  align-items:flex-start;
+  flex-direction:column;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+h1 {
+  margin-top:50px;
+}
+
+.session-break-section {
+  margin-top: 75px;
+  display:flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.timer-section {
+  margin-top:25px;
+}
+
+#session-length, #break-length {
+  font-size: 20px;
+}
+
+#timer-label {
+  font-size: 30px;
+}
+
+#time-left {
+  font-size:150px;
+  margin-top:-40px;
+  display:flex;
+  justify-content: center;
+}
+
+.start-stop-reset {
+  display: flex;
+  width:225px;
+  margin:auto;
+  justify-content: space-between
+}
+
+.background {
+  min-width: 320px;
+  min-height: 100vh;
+  width: 100vw;
+  border: 1px solid white;
+}
+
